bk_ida/gccida/c0/emit_unrolled_add
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_unrolled_add/src/unroll.c:2808:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest_reg), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_unrolled_add/src/unroll.c:2808:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest_reg), 
                 ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_unrolled_add/src/obj/unroll.o] Error 1
